--- a/src/assets/html/log.html
+++ b/src/assets/html/log.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <a href="../../../index.html">返回首页</a>
+<p>2018.2.29</p>
+<ul>
+    <li>增加搜素功能</li>
+</ul>
 <p>2018.2.28</p>
 <ul>
     <li>提交修改以后可能造成重复提交</li>
