'当数据渲染超过100条'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
 
 <div class="alert alert-success">
-    <h4>2018年互联网加班记录</h4>
+    <h4>2018年互联网加班记录[AccuradOA v0.12]</h4>
+    <!--<p style="color: red">我正在修改这个bug,目前只能显示100条数据，请通过搜素查看自己的输入</p>-->
     <p>初衷：方便各位记录加班，我每次建excel也很麻烦,在表格上按右键，可以下载表格</p>
     <hr>
     <p>打车说明： 打车请保留打车票据，滴滴快车等请保留网络发票和行程详情，不建议使用替票。</p>
@@ -59,6 +60,7 @@
 
         <label>餐费:</label>
         <select name="mealFee" class="form-control form-select">
+            <option value="0">0</option>
             <option value="20">20</option>
             <option value="40">40</option>
         </select>
