--- a/src/assets/html/log.html
+++ b/src/assets/html/log.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 <a href="../../../index.html">返回首页</a>
+<p>2018.3.20</p>
+<ul>
+    <li>登录、退出功能</li>
+    <li>绚丽的背景</li>
+</ul>
 <p>2018.2.29</p>
 <ul>
     <li>增加搜素功能</li>
