--- a/index.html
+++ b/index.html
@@ -1,128 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="src/vendors/dateTimepicker/bootstrap-datetimepicker.min.css">
-    <link rel="stylesheet" type="text/css" href="/node_modules/GridManager/css/GridManager.css"/>
-    <link rel="stylesheet" type="text/css" href="./src/assets/css/default.css">
-    <title>互联网研发加班记录</title>
+    <title>登录中心</title>
+    <link rel="stylesheet" href="src/assets/css/index.css">
 </head>
-<body>
+<body id="body">
+<main>
+    <h3>互联网研发加班记录</h3>
+    <form id="login">
+        <input type="text" placeholder="写下汝之名" name="name">
+        <input type="submit" value="查询/填写">
+    </form>
+</main>
 
-<div class="alert alert-success">
-    <h4>2018年互联网加班记录[AccuradOA v0.12]</h4>
-    <!--<p style="color: red">我正在修改这个bug,目前只能显示100条数据，请通过搜素查看自己的输入</p>-->
-    <p>初衷：方便各位记录加班，我每次建excel也很麻烦,在表格上按右键，可以下载表格</p>
-    <hr>
-    <p>打车说明： 打车请保留打车票据，滴滴快车等请保留网络发票和行程详情，不建议使用替票。</p>
-    <p>餐费说明： 工作日超过4个小时，非工作日超过6个小时，餐费40, 正常20。</p>
-    <p>提交票据：请写明加班日期和加班人，如果是替票请标记清楚。</p>
-    <hr>
-    <p><a href="src/assets/html/prev.html"> 往期报销查询入口 </a>|<a href="src/assets/html/log.html">修改记录 </a></p
-    <p>有些需求可能没有考虑全面，有bug或者需求，请不吝赐教！项目地址 > <a href=" https://github.com/yizhenF2E/AccuradOA">https://github.com/yizhenF2E/AccuradOA</a></p>
-</div>
-
-
-<div id="searchArea" class="search-area">
-    <div class="search-item">
-        <label class="search-title">姓名：</label>
-        <input class="search-content form-control " type="text" id="searchName" placeholder="请输入查询的姓名">
-    </div>
-    <button type="submit" class="btn btn-default" id="search">搜索</button>
-    <button class="btn btn-default" id="reset">重置</button>
-</div>
-<br>
-<!--输入-->
-<form class="form-inline" id="overTimeForm">
-    <div class="form-row">
-        <label>部门:</label>
-        <select name="department" class="form-control form-select">
-            <option value="互联网研发">互联网研发</option>
-        </select>
-
-        <label>姓名:</label>
-        <input type="text" class="form-control" name="name" placeholder="输入你的姓名">
-
-        <label>开始时间:</label>
-        <input size="16" class="form-control" type="text" name="dateStart" value="" readonly id='dateStart'>
-
-        <label>结束时间:</label>
-        <input size="16" class="form-control" type="text" value="" name="dateEnd" readonly id='dateEnd'>
-
-    </div>
-    <div class="form-row">
-        <label>车费:</label>
-        <input type="number"  class="form-control" name="fare" value="0" placeholder="输入数字">
-
-        <label>餐费:</label>
-        <select name="mealFee" class="form-control form-select">
-            <option value="0">0</option>
-            <option value="20">20</option>
-            <option value="40">40</option>
-        </select>
-        <button id="submit" class="btn btn-default">提交</button>
-    </div>
-</form>
-
-
-<!-- 提交确认 -->
-<div class="modal fade" id="basicModal" >
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body">
-                <ul>
-                    <li>部门：<span class="department">ddd</span></li>
-                    <li>姓名：<span class="name">ddd</span></li>
-                    <li>开始时间：<span class="start-date">ddd</span></li>
-                    <li>结束时间：<span class="end-date">ddd</span></li>
-                    <li>加班时长：<span class="time">ddd</span></li>
-                    <li>车费：<span class="fare">ddd</span></li>
-                    <li>餐费：<span class="meal-fee">ddd</span></li>
-                    <li>周几：<span class="week">ddd</span></li>
-                </ul>
-            </div>
-            <div class="modal-footer send-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭修改</button>
-                <button type="button" class="btn btn-primary model-send" >保存</button>
-            </div>
-            <div class="modal-footer delete-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">手残了</button>
-                <button type="button" class="btn btn-primary model-delete" >删除</button>
-            </div>
-        </div>
-    </div>
-</div>
-<br>
-<table></table>
-
-
-
-
-
-<!--依赖项-->
-<script src="./node_modules/jquery/dist/jquery.js"></script>
-<script src="src/vendors/moment.min.js"></script>
+<script src="../../../node_modules/jquery/dist/jquery.js"></script>
 <script src="src/vendors/jquery.serialize-object.min.js"></script>
-<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-
-<!--数据库-->
-<script src="./node_modules/leancloud-storage/dist/av.js"></script>
-
-<!--表格-->
-<script type="text/javascript" src="/node_modules/GridManager/js/GridManager.js"></script>
-
-<!--时间输入-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script>-->
-<script src="src/vendors/dateTimepicker/bootstrap-datetimepicker.min.js"></script>
-<!--数据库配置-->
-<script src="./src/assets/js/cloudConfig.js"></script>
-
-<!--配置 逻辑-->
-<script src="./src/assets/js/index.js"></script>
+<script src="src/assets/js/bg.js"></script>
+<script>
+    tdBackground(document.getElementById('body'), {
+        LIGHT:{
+            diffuse: '#3886cf'
+        }
+    })
+</script>
+<script src="src/assets/js/index.js"></script>
 </body>
 </html>
