--- a/src/assets/html/mine.html
+++ b/src/assets/html/mine.html
@@ -6,11 +6,28 @@
 </head>
 <body>
 <main>
-    <a href="accoradOA.html">填写加班</a>
-    <a href="prev.html">往前查询</a>
-    <a href="log.html">更新记录</a>
-    <a href="https://github.com/yizhenF2E/AccuradOA">项目地址</a>
-    <a class="exit">退出</a>
+    <nav>
+        <a href="accoradOA.html">填写加班</a>
+        <a href="prev.html">往前查询</a>
+        <a href="log.html">更新记录</a>
+        <a href="dataSubmit.html">修改个人资料</a>
+        <a href="https://github.com/yizhenF2E/AccuradOA">项目地址</a>
+        <a class="exit active">退出</a>
+    </nav>
+
+    <img class="mine-photo" src="" alt="">
+
+    <div id="uploadButtonWrap" class="upload-song">
+        <div id="uploadButton">
+            <p>点击或拖拽文件</p>
+        </div>
+    </div>
 </main>
+<script src="../../../node_modules/jquery/dist/jquery.js"></script>
+
+<script src="../vendors/moxie.js"></script>
+<script src="../vendors/qiniu.min.js"></script>
+<script src="../js/mine.js"></script>
+
 </body>
 </html>
