--- a/src/assets/html/accoradOA.html
+++ b/src/assets/html/accoradOA.html
@@ -17,14 +17,14 @@
         <div class="alert alert-success">
             <h4>2018年互联网加班记录[AccuradOA v0.13]</h4>
             <!--<p style="color: red">我正在修改这个bug,目前只能显示100条数据，请通过搜素查看自己的输入</p>-->
-            <p>在表格上按右键，可以下载表格,然后请各位及时填写！(ಥ_ಥ) 新功能个人中心和交友正在构思，有其他好想法请提出</p>
+            <p>在表格上按右键，可以下载表格,然后请各位及时填写！(ಥ_ಥ) </p>
             <hr>
             <p>打车说明：打车请保留打车票据，滴滴快车等请保留网络发票和行程详情，不建议使用替票。</p>
             <p class="active">餐费说明：工作日和非工作日超过6个小时，餐费40, 正常20。</p>
             <p>提交票据：请写明加班日期和加班人，如果是替票请标记清楚。(ಥ_ಥ)</p>
             <p class="active">产生的调休请在三个月内用完，不能累计哦！</p>
             <hr>
-            <p><a href="mine.html">个人中心</a>|<a href="prev.html"> 往期报销查询入口 </a>|<a href="log.html">更新日志 </a> | <a class="exit">退出点这里</a></p>
+            <p><a href="prev.html"> 往期报销查询入口 </a>|<a href="log.html">更新日志 </a> | <a class="exit">退出点这里</a> | <a>个人中心[正在写..求各位建议]</a></p>
             <!--<a href="friend.html">认识基友...⁄(⁄ ⁄•⁄ω⁄•⁄ ⁄)⁄....</a>-->
             <hr>
 
