--- a/src/assets/html/log.html
+++ b/src/assets/html/log.html
@@ -5,7 +5,12 @@
     <title>版本记录</title>
 </head>
 <body>
-<a href="../../../index.html">返回首页</a>
+<a href="accoradOA.html">返回表格页面</a>
+<p>2018.4.10</p>
+<ul>
+    <li>修改一个bug[感谢李建平提出]</li>
+    <li>去掉餐费0元的选项</li>
+</ul>
 <p>2018.3.20</p>
 <ul>
     <li>登录、退出功能</li>
