--- a/src/assets/html/prev.html
+++ b/src/assets/html/prev.html
@@ -5,10 +5,12 @@
     <title>往期查询</title>
 </head>
 <body>
-<a href="../../../index.html">返回首页</a>
+<a href="accoradOA.html">返回表格页面</a>
+
 <h4>2018年查询</h4>
 <ul>
-    <li><a href="../../download/加班及调休-互联网中心 (1月 - 2月).xlsx/">加班及调休-互联网中心 (1月 - 2月).xlsx[审核中]</a></li>
+    <li><a href="../../download/加班及调休-互联网中心 (1月 - 2月).xlsx">加班及调休-互联网中心 (1月 - 2月).xlsx[已发放]</a></li>
+    <li><a href="../../download/加班及调休-互联网中心 (3月).xlsx">加班及调休-互联网中心 (1月 - 2月).xlsx[等待餐票中]</a></li>
 </ul>
 <h4>2017年查询</h4>
 <ul>
